[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv_papers"
version = "0.0.0"
description = "Tools for finding papers from arXiv."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Christopher E. Mower" },
]
license = { text = "BSD-2-Clause" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
dependencies = ["openai"]

[tool.setuptools]
include-package-data = false

# This is the key bit for src-layout
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["arxiv_papers*"]
